--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,8 @@
   --primary: #F89A1C;
   --primary-4: #D5F5E4;
   --primary-5: #FFFBEF;
+  --secondary-1: #2584AD;
+  --secondary-5: #F4FCFF;
   --mono-1: #A7A7A7;
   --mono-2: #f1f4f6;
   --mono-3: rgba(185, 185, 188, 0.72);
@@ -41,6 +43,22 @@ body{
   padding-left: 20px;
   padding-right: 20px;
   color: #000;
+}
+
+.navbar-light .navbar-nav .nav-item.active{
+  position: relative;
+}
+
+.navbar-light .navbar-nav .nav-item.active .nav-link {
+  color: var(--primary);
+}
+
+.navbar-light .navbar-nav .nav-item.active::after{
+  content: "";
+  position: absolute;
+  bottom: -16px;
+  border-bottom: 2px solid var(--primary);
+  width: 100%;
 }
   
 .navbar-brand{
@@ -94,6 +112,23 @@ body{
   height: 55px;
 }
 
+.bg-secondary-1{
+  background-color: var(--secondary-1);
+}
+
+.bg-primary{
+  background-color: var(--primary)!important;
+}
+
+.bg-primary-5{
+  background-color: var(--primary-5);
+}
+
+.bg-secondary-5 {
+  background-color: var(--secondary-5);
+}
+
+
 @media only screen and (max-width: 991px) {
   .navbar-light .navbar-nav .nav-link {
     padding-left: 0;
@@ -103,6 +138,26 @@ body{
 
 .typo-title {
   font-weight: 700;
+  font-size: 40px;
+}
+
+.text-xxs{
+  font-size: 10px;
+}
+
+.text-xl{
+  font-size: 20px;
+}
+
+.text-xxl {
+  font-size: 25px;
+}
+
+.text-2xl {
+  font-size: 30px;
+}
+
+.text-3xl {
   font-size: 40px;
 }
 
@@ -153,6 +208,15 @@ footer{
   padding-top: 80px;
 }
 
+footer.footer-one{
+  background-color: var(--primary-5);
+}
+
+footer.footer-one .footer-bottom{
+  background-color: white;
+}
+
+
 .footer .container{
   padding-bottom: 55px;
 }
@@ -162,4 +226,84 @@ footer .footer-bottom{
   align-items: center;
   justify-content: center;
   padding: 16px 0;
+}
+
+section#hero{
+  padding: 38px 0;
+}
+
+
+section#fiture{
+  background-color: white;
+  padding: 54px 0;
+}
+
+.icon-fiture {
+  background-color: var(--primary-5);
+  border-radius: 50%;
+  width: 42px;
+  height: 42px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--primary);
+}
+
+section#about-us{
+  position: relative;
+}
+
+section#about-us .img-left{
+  position: absolute;
+  height: 100%;
+  height: -moz-available;
+  height: -webkit-fill-available;
+  height: fill-available;
+}
+
+section#about-us .img-right{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+section#about-us .top{
+  padding: 70px 0;
+}
+
+section#about-us .bottom{
+  padding: 36px 0;
+}
+
+section#ekosistem{
+  padding: 70px 0;
+}
+
+.card-ekosistem{
+  background-color: white;
+  display: flex;
+}
+
+.card-ekosistem .body{
+  padding-top: 18px;
+  padding-left: 24px;
+}
+
+section#service .left{
+  padding: 114px 40px 114px 100px;
+}
+
+section#service .right {
+  padding: 114px 100px 114px 56px;
+}
+
+section#started {
+  padding: 51px 45px;
+}
+
+section#started .box{
+  background: linear-gradient(134.86deg, #F89A1C 25.06%, rgba(254, 178, 76, 0.630573) 80.25%, rgba(255, 181, 81, 0.59) 80.26%);
+  border-radius: 55px;
+  color: white;
+  padding: 38px 90px;
 }
