--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,8 +228,8 @@ footer{
   padding-top: 80px;
 }
 
-footer.footer-one{
-  
+footer.footer-one .container{
+  padding-bottom: 40px;
 }
 
 footer.footer-one .footer-bottom{
@@ -387,4 +387,97 @@ section#hero-gp .right {
   padding: 75px 100px 75px 75px;
   display: flex;
   align-items: center;
+}
+
+section#hero-about{
+  padding-top: 70px;
+  background-color: var(--primary-5);
+}
+
+section#hero-about .box{
+  padding: 40px 32px;
+  color: white;
+  min-height: 330px;
+  background-repeat: no-repeat;
+}
+
+section#hero-about .box.one{
+  background-image: url('../images/about-card-bg-1.png');
+}
+
+section#hero-about .box.two {
+  background-image: url('../images/about-card-bg-2.png');
+}
+
+section#hero-about .box.three {
+  background-image: url('../images/about-card-bg-3.png');
+}
+
+section#timeline{
+  padding: 80px 0;
+  min-height: 500px;
+}
+
+.timeline {
+  counter-reset: test 0;
+  position: relative;
+}
+
+.timeline .date{
+  position: absolute;
+  top: -40px;
+  font-size: 20px;
+}
+
+.timeline li {
+  list-style: none;
+  float: left;
+  width: 16.6666666667%;
+  position: relative;
+  text-align: left;
+  padding-right: 24px;
+}
+
+.timeline ul{
+  list-style: unset;
+}
+
+
+.timeline li:before {
+  content: "";
+  width: 23px;
+  height: 23px;
+  display: block;
+  text-align: center;
+  line-height: 23px;
+  background: var(--secondary-1);
+  transition: all ease-in-out .3s;
+  cursor: pointer;
+}
+
+.timeline li:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: var(--primary);
+  top: 11px;
+  left: 0;
+  right: 0;
+  z-index: -999;
+  transition: all ease-in-out .3s;
+}
+
+
+.timeline li.active-tl {
+  color: #555555;
+}
+
+.timeline li.active-tl:before {
+  background: #4caf50;
+  color: #F1F1F1;
+}
+
+.timeline li.active-tl+li:after {
+  background: #4caf50;
 }
